--- a/react-weather-app/src/index.css
+++ b/react-weather-app/src/index.css
@@ -14,6 +14,8 @@ body {
   
 }
 
+
+
 .iconWeather {
   font-size: 2  rem;
 }
@@ -39,13 +41,14 @@ h1 {
 
 .app::before {
   content: '';
-  background: url('./assets/pexels-sagui-andrea-618833\(1\).jpg')no-repeat center center/cover;
+  background: url('./assets//img1.jpg')no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   z-index: -1;
+  animation: change 100s infinite ease-in-out;
 }
 
 .container {
@@ -102,4 +105,25 @@ h1 {
 .iconWeather {
   height: 100px;
   width: 100px;
+}
+
+@keyframes change {
+  0% {
+    background-image: url(./assets/img1.jpg);
+  }
+  20% {
+    background-image: url(./assets/img2.jpg);
+  }
+  40% {
+    background-image: url(./assets/img3.jpg);
+  }
+  60% {
+    background-image: url(./assets/img4.jpg);
+  }
+  80% {
+    background-image: url(./assets/img5.jpg);
+  }
+  100% {
+    background-image: url(./assets/img6.jpg);
+  }
 }
